--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# The part of the world of games utils, file that saves scores
+Scores.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
