--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# The part of the world of games utils, file that saves scores
+# The parts of the world of games utils
 Scores.txt
+test.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
