docker-compose and e2e fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     ports:
       - "8777:5000"
     volumes:
-      - Scores.txt:/Scores.txt
+      - ./Scores.txt:/app/scores/Scores.txt
